Fix jumps while toggling theme :-)

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,10 +1,14 @@
 html {
   @apply text-base-sm md:text-base;
-  scroll-padding-top: 120px;
 }
 
 body {
   @apply bg-body text-base dark:bg-darkmode-body font-primary font-normal leading-relaxed text-text dark:text-darkmode-text;
+}
+
+/* Fix für überdeckte Anker */
+:target {
+  scroll-margin-top: 120px;
 }
 
 h1,
